div de formularios

--- a/factura.html
+++ b/factura.html
@@ -10,8 +10,26 @@
 <body>
      
       <section id="container">
-            <div class="tittle_page"></div>
-<h1><i class="fas fa-cube"></i> Nuevas Ventas</h1>
+            <div class="tittle_page">
+                <h1><i class="fas fa-cube"></i> Nuevas Ventas</h1>
+            </div>
+            <div class="action_cliente">
+                <h4>Datos del cliente</h4>
+                <a href="#" class="btn_new btn_new_cliente"><i class="fas fa-plus"></i> Nuevo Cliente</a>
+            </div>
+<form name="form_new_cliente_venta" id="form_new_cliente_venta" class="datos">
+    <input type="hidden" name="action" value="addCliente">
+    <input type="hiddem" id="idCliente" name="idCliente" value="" required>
+    <div class="wd30">
+        <label>Nit</label>
+        <input type="text" name="nit_cliente" id="nit_cliente">
+    </div>
+    <div class="wd30">
+        <label>Nombre</label>
+        <input type="text" name="nom_cliente" id="nom_cliente">
+    </div>
+
+</form>
       </section>
 </body>
 </html>
