--- a/factura.html
+++ b/factura.html
@@ -19,7 +19,7 @@
             </div>
 <form name="form_new_cliente_venta" id="form_new_cliente_venta" class="datos">
     <input type="hidden" name="action" value="addCliente">
-    <input type="hiddem" id="idCliente" name="idCliente" value="" required>
+    <input type="hidden" id="idCliente" name="idCliente" value="" required>
     <div class="wd30">
         <label>Nit</label>
         <input type="text" name="nit_cliente" id="nit_cliente">
@@ -28,8 +28,46 @@
         <label>Nombre</label>
         <input type="text" name="nom_cliente" id="nom_cliente">
     </div>
-
+    <div class="wd30">
+        <label>Telefono</label>
+        <input type="text" name="tel_cliente" id="tel_cliente">
+    </div>
+    <div class="wd100">
+        <label>Direccion</label>
+        <input type="text" name="dir_cliente" id="dir_cliente">
+    </div>
+    <div id="div_registro_cliente" class="wd100">
+        <button type="submit" class="btn_save"><i class="far fa-save fa-lg"></i>Guardar</button>
+    </div>
 </form>
+<div class="datos_venta">
+    <h4>Datos de ventas</h4>
+    <div class="datos">
+        <div class="wd50">
+            <label>Vendedor</label>
+            <p>Carlos Estrada Porras</p>
+        </div>
+        <div class="wd50">
+            <label>Acciones</label>
+            <div id="acciones_venta">
+                <a href="#" class="btn_ok textcenter" id="btn_anular_venta"><i class="fas fa-ban"></i> Anular </a>
+                <a href="#" class="btn_new textcenter" id="btn_facturar_venta"><i class="far fa-edit"></i> Procesar </a>
+            </div>
+        </div>
+    </div>
+</div>
+
+<table class="tbl_venta">
+<thead>
+    <tr>
+        <th width="100px">Codigo</th>
+        <th width>Descripcion</th>
+        <th width="100px">Cantidad</th>
+        <th width="textright">Precio</th>
+    </tr>
+</thead>
+
+</table>
       </section>
 </body>
 </html>
