Detalles de factura

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
           <nav class="main-nav">
             <span class="icon-menu" id="btn-menu"><i class="fas fa-bars"></i></span>
             <ul class="menu" id="menu">
-              <li class="menu__item"><a href="" class="menu__link menu__link--select"><span>Inicio</span></a></li>
+              <li class="menu__item"><a href="index.html" class="menu__link menu__link--select"><span>Inicio</span></a></li>
               <li class="menu__item"><a href="factura.html" class="menu__link"><span>Ventas</span></a></li>
               <li class="menu__item"><a href="login.html" class="menu__link"><span>Login</span></a></li>
               <li class="menu__item"><a href="registrar.html" class="menu__link"><span>Registro</span></a></li>
