--- a/login.html
+++ b/login.html
@@ -15,7 +15,7 @@
           <nav class="main-nav">
             <span class="icon-menu" id="btn-menu"><i class="fas fa-bars"></i></span>
             <ul class="menu" id="menu">
-              <li class="menu__item"><a href="" class="menu__link"><span style="color: black;">Inicio</span></a></li>
+              <li class="menu__item"><a href="index.html" class="menu__link"><span style="color: black;">Inicio</span></a></li>
               <li class="menu__item"><a href="factura.html" class="menu__link"><span  style="color: black;">Ventas</span></a></li>
               <li class="menu__item"><a href="login.html" class="menu__link menu__link--select"><span  style="color: black;">Login</span></a></li>
               <li class="menu__item"><a href="registrar.html" class="menu__link"><span  style="color: black;">Registro</span></a></li>
