hoy si ya, creo xd

--- a/venta.html
+++ b/venta.html
@@ -78,15 +78,14 @@
         <option value="mercedes">Larga Vida Lisa</option>
         <option value="audi">Yanfei is love</option>
       </select>
+      
   </div>
   <div class="wd100">
       <label>Cantidad:</label>
       <input type="number" name="nom_cliente" id="nom_cliente">
   </div>
  
-  <div id="div_registro_cliente" class="wd100">
-      <button type="submit" class="btn_save"><i class="far fa-save fa-lg"></i>Guardar</button>
-  </div>
+  <input type="button" value="Agregar al pedido">
 </form>
 
 <div class="datos_venta">
